[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://Character.gd" type="Script" id=3]
[ext_resource path="res://Level.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="BoxShape" id=2]

extents = Vector3( 1, 1, 1 )

[node name="Main" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="." index="0"]

transform = Transform( 0.5, 0, 0, 0, 0.336122, 0.370164, 0, -0.370164, 0.336122, 1.93726, 18.8615, 27.0445 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0

[node name="Player1" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.8162, 0.742359, 0 )
script = ExtResource( 3 )
is_player1 = true

[node name="Player2" parent="." index="2" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.8162, 0.742359, 4.09967 )
script = ExtResource( 3 )
_sections_unfolded = [ "Axis Lock", "Collision", "Transform" ]
is_player1 = false

[node name="ScoresPanel" type="Panel" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 1020.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "custom_styles" ]

[node name="Player1ScoreLabel" type="Label" parent="ScoresPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_right = 130.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Player 1: 0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_group_": true
}

[node name="Player2ScoreLabel" type="Label" parent="ScoresPanel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 50.0
margin_right = 130.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Player 2: 0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="ResultPanel" type="Panel" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 350.0
margin_top = 229.0
margin_right = 680.0
margin_bottom = 419.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="ResultPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 51.0
margin_right = 293.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "You Win"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "custom_styles" ]

[node name="InstructionsLabel" type="Label" parent="ResultPanel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 121.0
margin_right = 280.0
margin_bottom = 135.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Press (R)  to continuee
Press (N) for New Game"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DirectionalLight" type="DirectionalLight" parent="." index="5"]

transform = Transform( 1, 0, 0, 0, 0.507953, 0.861385, 0, -0.861385, 0.507953, 0.138737, 26.3434, 12.4557 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Shadow" ]

[node name="Spatial" parent="." index="6" instance=ExtResource( 4 )]

[node name="Ball" parent="." index="7" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.2186, 3.00035, 0 )
friction = 0.5
bounce = 0.5
can_sleep = false
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Player1SpawnPoint" type="Position3D" parent="." index="8"]

transform = Transform( -4.37114e-08, 0, 4.27639, 0, 1, 0, -1, 0, -1.86927e-07, -10, 1.15, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Player2SpawnPoint" type="Position3D" parent="." index="9"]

transform = Transform( -4.37114e-08, 0, -4.27639, 0, 1, 0, 1, 0, -1.86927e-07, 10, 1.15, 0 )
_sections_unfolded = [ "Transform" ]

[node name="BallSpawnPoint" type="Position3D" parent="." index="10"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4.27639, 0, 1, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Player1GoalArea" type="Area" parent="." index="11"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4.27639, -20.3912, 8.55055, 0.324338 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Player1GoalArea" index="0"]

transform = Transform( 1, 0, 0, 0, 7.40985, 0, 0, 0, 1, -0.558399, -1.66763, 0 )
shape = SubResource( 2 )
disabled = false

[node name="Player2GoalArea" type="Area" parent="." index="12"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4.27639, 23.8, 8.55055, 0.324338 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Player2GoalArea" index="0"]

transform = Transform( 1, 0, 0, 0, 7.40985, 0, 0, 0, 1, -0.558399, -1.66763, 0 )
shape = SubResource( 2 )
disabled = false

[connection signal="body_entered" from="Player1GoalArea" to="." method="_on_Player1GoalArea_body_entered"]

[connection signal="body_entered" from="Player2GoalArea" to="." method="_on_Player2GoalArea_body_entered"]


